--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="dice">
           <p>Player 2</p>
-          <img src="./images/dice6.png" alt="dice-6">
+          <img class="player2-dice" src="./images/dice6.png" alt="dice-6">
         </div>
         <footer>&copy Nadia Abby 2019</footer>
       </div>
